That wasn't a bug, that was a feature! Schedule items that cross the threshold for visible schedules are now showed

--- a/inc/global.css
+++ b/inc/global.css
@@ -295,6 +295,13 @@ form {
 .day6 {
 	left:700px;
 }
+.shortenBottom {
+	border-bottom:2px solid orange !important;
+}
+.shortenTop {
+	border-top:2px solid orange !important;
+}
+
 .prevbutton {
 	position: relative;
 	float:left;
